Mise à jour: améliorations UI, handlers, services Shopify et système de billing

--- a/stock-easy-app/src/locales/fr/translation.json
+++ b/stock-easy-app/src/locales/fr/translation.json
@@ -863,16 +863,7 @@
       },
       "customValue": "Ou saisissez une valeur personnalisée (1-365 jours)",
       "customPlaceholder": "Ex : 75 jours",
-      "recommendation": "💡 Recommandation",
-      "recommendationTypes": {
-        "fashion": "Adapté pour les produits à rotation rapide",
-        "standard": "Recommandé pour la plupart des activités",
-        "durable": "Adapté pour les produits à longue durée de vie",
-        "b2b": "Adapté pour le commerce B2B",
-        "custom": "Valeur personnalisée selon vos besoins"
-      },
-      "validationError": "Veuillez entrer un nombre valide",
-      "rangeError": "Le seuil doit être entre 1 et 365 jours"
+      "recommendation": "💡 Recommandation"
     },
     "suppliers": {
       "title": "🏭 Gestion des Fournisseurs",
@@ -2227,6 +2218,118 @@
         "content": "En cas de litige, vous avez le droit d'introduire une réclamation auprès de la Commission Nationale de l'Informatique et des Libertés (CNIL) : www.cnil.fr"
       }
     }
+  },
+  "shipOrderModal": {
+    "title": "Expédier la commande",
+    "confirmShipment": "Confirmer l'expédition",
+    "description": "Saisissez les informations de suivi pour cette commande",
+    "trackingNumber": "Numéro de suivi",
+    "trackingNumberPlaceholder": "Ex: 1Z999AA1234567890",
+    "trackingNumberHelper": "Numéro de suivi fourni par le transporteur",
+    "trackingUrl": "URL de suivi",
+    "trackingUrlPlaceholder": "https://www.ups.com/track?trackingNumber=...",
+    "trackingUrlHelper": "Lien direct vers le suivi de la commande",
+    "cancel": "Annuler",
+    "ship": "Expédier"
+  },
+  "emailOrderModal": {
+    "title": "Commande - {{supplier}}",
+    "cancel": "Annuler",
+    "createWithoutEmail": "Créer sans email",
+    "sendAndCreate": "Envoyer et créer",
+    "deliveryWarehouse": "Entrepôt de livraison",
+    "noWarehouseConfigured": "Aucun entrepôt configuré",
+    "createWarehouseFirst": "Veuillez d'abord créer un entrepôt dans Paramètres → Entrepôts",
+    "deliveryAddress": "Adresse de livraison :",
+    "productsToOrder": "Produits à commander",
+    "orderTotal": "Total commande :",
+    "orderEmail": "Email de commande",
+    "emailDescription": "Vérifiez et modifiez le contenu avant envoi",
+    "to": "À:",
+    "subject": "Objet:",
+    "subjectPlaceholder": "Objet de l'email",
+    "message": "Message:",
+    "invalidEmail": "Adresse email invalide",
+    "sku": "SKU",
+    "rec": "Rec"
+  },
+  "customOrderModal": {
+    "title": "Commande personnalisée - {{supplier}}",
+    "cancel": "Annuler",
+    "createWithoutEmail": "Créer sans email",
+    "sendAndCreate": "Envoyer et créer",
+    "deliveryWarehouse": "Entrepôt de livraison",
+    "noWarehouseConfigured": "Aucun entrepôt configuré",
+    "createWarehouseFirst": "Veuillez d'abord créer un entrepôt dans Paramètres → Entrepôts",
+    "selectWarehouse": "Sélectionner un entrepôt",
+    "deliveryAddress": "Adresse de livraison :",
+    "productsToOrder": "Produits à commander",
+    "orderTotal": "Total commande :",
+    "orderEmail": "Email de commande",
+    "emailDescription": "Vérifiez et modifiez le contenu avant envoi",
+    "to": "À:",
+    "subject": "Objet:",
+    "subjectPlaceholder": "Objet de l'email",
+    "message": "Message:",
+    "invalidEmail": "Adresse email invalide",
+    "sku": "SKU",
+    "rec": "Rec"
+  },
+  "reconciliationModal": {
+    "title": "Vérification de la réception",
+    "cancel": "Annuler",
+    "validateReception": "Valider la réception",
+    "toReconcile": "À réconcilier",
+    "supplier": "Fournisseur:",
+    "deliveryWarehouse": "Entrepôt de livraison:",
+    "date": "Date:",
+    "total": "Total:",
+    "estimatedDelivery": "Livraison estimée:",
+    "daysLate": "{{count}}j de retard",
+    "today": "Aujourd'hui",
+    "tomorrow": "Demain",
+    "inDays": "dans {{count}}j",
+    "trackingNumber": "Numéro de suivi:",
+    "orderedProducts": "Produits commandés:",
+    "quantity": "Quantité",
+    "units": "unités",
+    "unitPrice": "Prix unitaire",
+    "lineTotal": "Total ligne",
+    "instructionsTitle": "Instructions de réconciliation",
+    "instructionsText": "Saisissez les quantités réellement reçues et leur état pour chaque produit.",
+    "receivedQuantities": "Quantités reçues",
+    "ordered": "📦 Commandé",
+    "receivedHealthy": "✅ Reçu sain",
+    "damaged": "🔴 Endommagé",
+    "status": "📊 Statut",
+    "compliant": "✅ Conforme",
+    "missing": "❌ {{count}} manquant(s)",
+    "excess": "📈 +{{count}} en plus",
+    "damagedStatus": "⚠️ {{count}} endommagé(s)",
+    "totalReceived": "Total: {{count}}",
+    "missingLoss": "Perte manquants",
+    "damagedLoss": "Perte endommagés",
+    "discrepancySummary": "⚠️ Résumé des écarts",
+    "totalMissing": "Total manquants",
+    "totalDamaged": "Total endommagés",
+    "totalLoss": "Perte totale",
+    "claimToSupplier": "À réclamer au fournisseur",
+    "compliantDelivery": "Livraison conforme",
+    "allProductsReceivedCorrectly": "Tous les produits sont reçus en bon état et en quantité correcte."
+  },
+  "reclamationModal": {
+    "title": "Email de Réclamation",
+    "close": "Fermer",
+    "claimForOrder": "Réclamation pour la commande: {{orderId}}",
+    "supplierLabel": "Fournisseur: {{supplier}}",
+    "autoGeneratedEmail": "Email généré automatiquement pour signaler les problèmes de réception.",
+    "claimDetails": "Détails de la réclamation:",
+    "issues": "❌ Problèmes:",
+    "damagedQuantity": "🔴 Quantité endommagée:",
+    "emailPreview": "Aperçu de l'email:",
+    "toLabel": "À:",
+    "subjectLabel": "Objet:",
+    "bodyLabel": "Corps:"
   }
 }
 
